--- a/Teacher/assets/hometeacher.css
+++ b/Teacher/assets/hometeacher.css
@@ -97,3 +97,6 @@ th, td {
 th {
     background-color: #f2f2f2; /* Light grey background for headers */
 }
+.appointment-count {
+    font-weight: bold;
+}
