--- a/Student/assets/info.css
+++ b/Student/assets/info.css
@@ -53,46 +53,38 @@ body {
     font-size: 30px;
 }
 
-.group-table-container {
+.form-container {
     margin: 10px 25px 25px 25px;
     background: white;
     padding: 20px;
-    height: 70%;
+    height: 80%;
 }
-
-.group-table {
-    width: 100%;
-    border-collapse: collapse;
-    border: 1px solid #ccc;
+form {
+    display: flex;
+    flex-direction: column;
 }
-
-.group-table th, .group-table td {
-    border: 1px solid #ccc;
-    padding: 8px;
-    text-align: left;
+.mb-3 {
+    margin-bottom: 10px; /* Điều chỉnh khoảng cách giữa các trường nhập */
 }
-
-.group-table th {
-    background-color: #f2f2f2;
+label {
     font-weight: bold;
-    border: 1px solid #000;
 }
-
-
-#groupMembersTable {
-    width: 100%;
-    border-collapse: collapse;
+input[type="text"], input[type="date"], input[type="tel"], input[type="email"] {
+    width: 100%; /* Cho phép input chiếm toàn bộ chiều rộng */
+    padding: 4px;
     border: 1px solid #ccc;
+    border-radius: 4px;
+    background-color: #e0e0e0;
 }
-
-#groupMembersTable th, #groupMembersTable td {
-    border: 1px solid #ccc;
-    padding: 8px;
-    text-align: left;
+button {
+    align-self: flex-end;
+    padding: 10px 20px;
+    background-color: #3b49df;
+    color: #fff;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
 }
-
-#groupMembersTable th {
-    background-color: #f2f2f2;
-    font-weight: bold;
-    border: 1px solid #000;
+button:hover {
+    background-color: #303f9f;
 }
