--- a/Teacher/assets/group.css
+++ b/Teacher/assets/group.css
@@ -5,12 +5,13 @@ body {
 }
 
 .container {
-    display: flex;
-    height: 100vh;
-    width: 100%;
-    margin: 0;
-    box-sizing: border-box;
-    min-width: 0;
+    display: flex; 
+    height: 100vh; 
+    max-width: 100% !important;
+    padding-right: 0 !important; 
+    padding-left: 0 !important;
+    margin-right: 0 !important;
+    margin-left: 0 !important;
 }
 
 .right-panel {
