--- a/Teacher/assets/freecalendar.css
+++ b/Teacher/assets/freecalendar.css
@@ -4,7 +4,10 @@ body {
 }
 
 .container-fluid {
-    padding: 0;
+    padding-right: 0 !important; 
+    padding-left: 0 !important;
+    margin-right: 0 !important;
+    margin-left: 0 !important;
     margin: 0;
     width: 100%; /* Sử dụng 100% thay vì 100vw */
     max-width: 100%;
@@ -14,40 +17,6 @@ body {
     box-sizing: border-box;
 }
 
-.function-list {
-    background: linear-gradient(180deg, #D9D9D9 0%, #737373 0%, #777777 96%, #777777 96%, #737373 100%);
-    width: 250px; /* Chiều rộng cố định */
-    height: 100vh; /* Chiều cao đầy đủ */
-    padding: 0;
-    margin: 0;
-}
-
-.TT-link , .GV-link, .item-link {
-    text-align: left; /* Căn chữ và icon về bên trái */
-    text-decoration: none;
-    display: flex; /* Sử dụng flexbox để căn chỉnh */
-    align-items: center; /* Căn giữa các mục theo chiều dọc */
-    padding: 10px 15px; /* Đồng bộ padding */
-    font-size: 15px; /* Đồng bộ font-size */
-    color: #fff;
-}
-
-.TT-link .bi, .GV-link .bi, .item-link .bi {
-    margin-right: 10px; /* Khoảng cách giữa icon và chữ */
-    font-size: 30px; /* Đồng bộ kích thước icon */
-}
-
-.divider{
-    border: none;
-    height: 0.5px;
-    background-color: #ccc; /* Màu của đường kẻ */
-    margin: 0; /* Loại bỏ margin mặc định */
-}
-
-.function-list-item {
-    list-style-type: none;
-    padding: 0; /* Loại bỏ padding mặc định */
-}
 .right-panel {
     flex-grow: 1; /* Cho phép right-panel mở rộng để chiếm phần còn lại của không gian */
     background-color: #f0f0f0; /* Màu xám nhạt */
