--- a/Teacher/assets/history.css
+++ b/Teacher/assets/history.css
@@ -14,41 +14,6 @@ body {
     margin-left: 0 !important;
 }
 
-.function-list {
-    background: linear-gradient(180deg, #D9D9D9 0%, #737373 0%, #777777 96%, #777777 96%, #737373 100%);
-    width: 250px; 
-    height: 100vh; 
-    padding: 0;
-    margin: 0;
-}
-
-.TT-link, .GV-link, .item-link {
-    text-align: left; 
-    text-decoration: none;
-    display: flex; 
-    align-items: center; 
-    padding: 10px 15px; 
-    font-size: 15px; 
-    color: #fff;
-}
-
-.TT-link .bi, .GV-link .bi, .item-link .bi {
-    margin-right: 10px; 
-    font-size: 30px; 
-}
-
-.divider {
-    border: none;
-    height: 0.5px;
-    background-color: #ccc; 
-    margin: 0; 
-}
-
-.function-list-item {
-    list-style-type: none;
-    padding: 0; 
-}
-
 .right-panel {
     flex-grow: 1; 
     background-color: #f0f0f0; 
@@ -89,35 +54,39 @@ body {
 }
 
 .appointment-container {
-    margin: 10px 25px; 
+    margin: 10px 25px 25px 25px;
     background: white;
     padding: 20px;
-    flex-grow: 1;
-    overflow-y: auto;
+    height: 70%;
 }
 
 table {
     width: 100%;
-    max-width: 100%; 
-    margin-bottom: 20px; 
-    border-collapse: collapse; 
+    border-collapse: collapse;
+    border: 1px solid #ccc;
 }
 
-th {
-    text-align: left; 
-    padding: 12px 15px; 
-    background-color: #f8f9fa; 
-    color: #212529; 
-    border-bottom: 2px solid #dee2e6; 
+table th, table td {
+    border: 1px solid #ccc;
+    padding: 8px;
+    text-align: left;
 }
 
-td {
-    padding: 12px 15px; 
-    border-bottom: 1px solid #dee2e6; 
+table th {
+    background-color: #f2f2f2;
+    font-weight: bold;
+    border: 1px solid #000;
 }
 
-@media (max-width: 768px) {
-    table {
-        overflow-x: auto; 
-    }
+.title-filter-container {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin-bottom: 10px; /* Điều chỉnh khoảng cách dưới cùng nếu cần */
+    margin-top: 10px;
+}
+
+#personal-appointment-title, #group-appointment-title {
+    font-size: 20px; /* Tăng kích thước font */
+    font-weight: bold; /* Làm đậm chữ */
 }
