--- a/Teacher/assets/group.css
+++ b/Teacher/assets/group.css
@@ -28,14 +28,10 @@ body {
     box-sizing: border-box;
     display: flex;
     align-items: center;
-    justify-content: space-between;
+    justify-content: flex-end;
 }
 
-.navigation-icon {
-    font-size: 40px;
-}
-
-.navigation-link {
+.log-out {
     font-size: 40px;
     color: black;
 }
@@ -55,12 +51,21 @@ body {
 
 .group-add-container {
     text-align: right;
-    padding-right: 20px;
-    font-size: 24px;
+    font-size: 18px;
 }
 
 .group-add-link {
     color: #000;
+    text-decoration: none;
+}
+
+.group-add-container a {
+    display: inline-block;
+    padding: 10px 15px;
+    background-color: #28a745;
+    color: white;
+    border-radius: 20px;
+    text-decoration: none;
 }
 
 .group-table-container {
@@ -90,4 +95,48 @@ body {
 
 .list-group-item:hover {
     background-color: #dadada; /* Màu sáng hơn khi di chuột qua */
+}
+
+#groupMembersTable {
+    width: 100%;
+    border-collapse: collapse;
+    border: 1px solid #ccc;
+}
+
+#groupMembersTable th, #groupMembersTable td {
+    border: 1px solid #ccc;
+    padding: 8px;
+    text-align: left;
+}
+
+#groupMembersTable th {
+    background-color: #f2f2f2;
+    font-weight: bold;
+    border: 1px solid #000;
+}
+
+.filter-container {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.filter-add-container {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin-top: 10px;
+    margin-bottom: 10px;   
+}
+
+.filter-container {
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+    margin: 0; /* Adjusted to remove margin */
+}
+
+.group-add-container {
+    text-align: right;
+    margin: 0; /* Adjusted to remove margin */
 }
