--- a/Teacher/assets/liststudent.css
+++ b/Teacher/assets/liststudent.css
@@ -13,37 +13,40 @@ body {
     margin-left: 0 !important;
 }
 
-/* Định dạng cho container chính */
-.container {
-    display: flex;
+.right-panel {
+    flex-grow: 1;
+    background-color: #f0f0f0;
     height: 100vh;
+    width: 100%;
+}
+
+.navigation-bar {
+    padding: 29px;
+    background-color: white;
+    height: 50px;
+    box-sizing: border-box;
+    display: flex;
+    align-items: center;
+    justify-content: flex-end;
+}
+
+.log-out {
+    font-size: 40px;
+    color: black;
 }
 
 /* Định dạng cho phần nội dung bên phải */
-.right-panel {
-    flex-grow: 1; /* Cho phép right-panel mở rộng để chiếm phần còn lại của không gian */
-    background-color: #f0f0f0; /* Màu xám nhạt */
-    height: 100vh; /* Đảm bảo chiều cao đầy đủ */
+.home-link-container {
+    display: flex;
+    justify-content: flex-end;
+    padding-right: 20px;
+    padding-top: 15px;
 }
 
-/* Định dạng cho thanh điều hướng trên cùng */
-.right-panel .navigation {
-    padding: 29px;
-    background-color: white;
-    height: 50px; /* Độ cao tổng thể bao gồm padding */
-    box-sizing: border-box; /* Đảm bảo padding không làm tăng kích thước */
-    display: flex; 
-    align-items: center; 
-    justify-content: space-between;
-}
-
-.right-panel .navigation .bi-list {
-    font-size: 40px;
-}
-
-.right-panel .navigation .bi-box-arrow-right {
-    font-size: 40px;
-    color: black;
+.home-link {
+    text-decoration: none;
+    color: #567184;
+    font-size: 30px;
 }
 
 .appointment-container {
@@ -52,12 +55,8 @@ body {
     padding: 20px; /* Thêm padding 20px ở bốn góc */
     border-radius: 8px; /* Tùy chọn: thêm bo góc để tạo hiệu ứng đẹp hơn */
     position: relative; /* Đặt position relative để chứa các phần tử tuyệt đối bên trong */
-}
-
-.appointment-container h1 {
-    margin-top: 0;
-    color: #546e7a;
-    font-size: 25px;
+    height: 70%;
+    overflow-y: auto;
 }
 
 /* Định dạng cho các nút */
