--- a/Teacher/assets/project.css
+++ b/Teacher/assets/project.css
@@ -28,14 +28,10 @@ body {
     box-sizing: border-box;
     display: flex;
     align-items: center;
-    justify-content: space-between;
+    justify-content: flex-end;
 }
 
-.navigation-icon {
-    font-size: 40px;
-}
-
-.navigation-link {
+.log-out {
     font-size: 40px;
     color: black;
 }
@@ -56,11 +52,22 @@ body {
 .project-add-container {
     text-align: right;
     padding-right: 20px;
-    font-size: 24px;
+    font-size: 18px;
 }
 
 .project-add-link {
     color: #000;
+    text-decoration: none;
+}
+
+.project-add-container a {
+    display: inline-block;
+    padding: 10px 15px;
+    margin-bottom: 10px;
+    background-color: #28a745;
+    color: white;
+    border-radius: 20px;
+    text-decoration: none;
 }
 
 .project-table-container {
